# Photomosiac-Generator

./: CMakeLists.txt  README.md  main.cpp
lib/include/: Image.h  Pixel.h  kdTree.h  photomosaic.h
lib/src/: Image.cpp  Pixel.cpp  photomosaic.cpp
